[package]
name = "interactive_term"
version = "0.1.0"
authors = ["nikita-skobov"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.10.1"
yaml-rust = "0.3.5"
clap = { version = "2.33.0", features = ["yaml"]}
